(transaction): create checkout product
